# aquascape-botany

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  publish.yml
data/: plants.json
docs/: LICENSE-AUDIT.md  citations.bib
js/: index.ts  package.json  plantSvg.ts  schema.test.ts  tsconfig.json
py/: pyproject.toml
py/aquascape_botany/: __init__.py  validate.py
py/tests/: test_plants.py
schema/: plant.schema.json
