[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aquascape-botany"
version = "0.1.0"
description = "Aquatic-plant knowledge base consumer library (Python)"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
dependencies = [
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["aquascape_botany"]

[tool.hatch.build.targets.wheel.force-include]
"../data/plants.json" = "aquascape_botany/_data/plants.json"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
